--- a/CompanyNews/Views/AdminApp/AccountPage.xaml
+++ b/CompanyNews/Views/AdminApp/AccountPage.xaml
@@ -8,14 +8,155 @@
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
       mc:Ignorable="d" 
       MouseLeftButtonDown="Window_MouseLeftButtonDown"
-      MinHeight="700" Width="Auto"
+      MinHeight="700" Width="Auto" SizeChanged="Window_SizeChanged"
       Title="AccountPage">
 
-    <Grid>
+    <Page.Resources>
 
-        <TextBlock Grid.Row="0" Text="Страница для работы с учетными записями в разработке..." FontSize="24" Foreground="Black"
-VerticalAlignment="Center" FontWeight="ExtraBlack" Grid.Column="1" Margin="30,10,0,10"/>
-        
+        <!--связываем View и ViewModel-->
+        <ViewModel:AccountViewModel x:Key="AccountViewModel"/>
+
+        <!--анимация подсветки полей-->
+        <Storyboard x:Key="fieldIllumination">
+            <ColorAnimation Storyboard.TargetProperty="Background.(SolidColorBrush.Color)"
+From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
+        </Storyboard>
+
+    </Page.Resources>
+
+    <Grid DataContext="{StaticResource AccountViewModel}">
+
+        <!--стили-->
+        <Grid.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="\Dictionary\Table.xaml"/>
+                    <ResourceDictionary Source="\Dictionary\Popup.xaml"/>
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </Grid.Resources>
+
+        <Grid Margin="0,0,0,50">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <!--заголовок-->
+            <TextBlock Text="Пользователи приложения" Grid.Row="0" FontSize="30" 
+           Foreground="Black" FontWeight="DemiBold"  Margin="50,30,50,10"/>
+
+            <!--Сообщения системы-->
+            <Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Background="#FFEACBC0" CornerRadius="5" BorderBrush="Black" 
+                        BorderThickness="1" x:Name="SystemMessageBorder" Visibility="Hidden"
+                        HorizontalAlignment="Right" VerticalAlignment="Top" Height="Auto" Width="500" Margin="0,-2,100,0">
+                <!--Тело сообщения-->
+                <TextBlock Text="{Binding SystemMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  
+       x:Name="SystemMessage" HorizontalAlignment="Left" VerticalAlignment="Center"
+       Margin="10, 10, 10, 10" 
+       FontWeight="Regular" FontSize="18"
+       Width="470"
+       TextWrapping="Wrap"/>
+            </Border>
+
+            <!--#region Кнопки для взаиомодействия с таблицей-->
+            <Grid Grid.Row="1"  Margin="50,30,50,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBox Grid.Column="0" x:Name="Search" 
+                        Height="50" Margin="0,0,0,0"
+                        VerticalAlignment="Center" HorizontalAlignment="Left"
+                        Text="{Binding UserSearch, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        TextChanged="UserSearch"
+                        Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                        materialDesign:HintAssist.Hint="Поиск пользователя" 
+                        materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+                        MaxLength="100" TextWrapping="Wrap" Width="300" />
+
+                <StackPanel Orientation="Horizontal" Grid.Column="1" >
+                    <Button Content="Добавить" 
+   MinWidth="100" Height="35" Background="Gray" Command="{Binding AddAccount}"
+   BorderBrush="Black"/>
+
+                    <Button Content="Редктировать" Command="{Binding EditAccount}"
+   MinWidth="100" Height="35" Background="Gray" BorderBrush="Black"
+   Margin="10,0,0,0" IsEnabled="{Binding IsWorkButtonEnable}"/>
+
+                    <Button Content="Удалить" MinWidth="100" 
+   Height="35" Background="Gray" BorderBrush="Black" Command="{Binding DeleteAccount}"
+   Margin="10,0,0,0" IsEnabled="{Binding IsWorkButtonEnable}"/>
+                </StackPanel>
+
+            </Grid>
+            <!--#endregion-->
+
+            <!--#region Table-->
+
+            <Grid Grid.Row="2" Margin="50,25,50,0">
+                <DataGrid IsReadOnly="True" Height="410" x:Name="MyDataGrid"
+                        HorizontalAlignment="Center" FontSize="16"
+                        VerticalScrollBarVisibility="Auto"
+                        Background="WhiteSmoke"
+                        BorderBrush="Black"
+                        BorderThickness="1"
+                        AutoGenerateColumns="False"
+                        ItemsSource="{Binding ListAccountExtendeds}"
+                        SelectedItem="{Binding SelectedAccount}"
+                        Style="{StaticResource MaterialDesignDataGrid}"
+                        ColumnHeaderStyle="{StaticResource ColumnTableHeader}">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Логин" 
+                                                Binding="{Binding login}"  
+                                                Width="*" IsReadOnly="True">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="Margin" Value="0,0,20,0"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn Header="Логин" Binding="{Binding name}"  Width="*" IsReadOnly="True">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="Margin" Value="0,0,20,0"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn Header="Роль" Binding="{Binding name}"  Width="*" IsReadOnly="True">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="Margin" Value="0,0,20,0"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+
+                </DataGrid>
+            </Grid>
+
+            <!--#endregion-->
+
+        </Grid>
+
     </Grid>
-    
+
 </Page>
