--- a/CompanyNews/Views/AdminApp/AdminHomePage.xaml
+++ b/CompanyNews/Views/AdminApp/AdminHomePage.xaml
@@ -7,7 +7,7 @@
       xmlns:ViewModel="clr-namespace:CompanyNews.ViewModels.AdminApp"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
       xmlns:control="clr-namespace:CompanyNews.Views.UserControls"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       MinHeight="700" Width="Auto"
       Title="AdminHomePage">
 
@@ -48,7 +48,7 @@ From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
         </Grid.RowDefinitions>
 
         <!--фон-->
-        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" Background="#FF80A2E8"/>
+        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" Background="#FF80A2E8" MouseLeftButtonDown="Window_MouseLeftButtonDown"/>
 
         <!--гамбургер меню-->
         <Grid Grid.Column="0" Grid.RowSpan="2" Panel.ZIndex="1">
