--- a/CompanyNews/Views/AdminApp/PersonalAccountAdmin.xaml
+++ b/CompanyNews/Views/AdminApp/PersonalAccountAdmin.xaml
@@ -141,7 +141,7 @@ Foreground="Black" FontWeight="ExtraLight"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="-25,0,0,0">
-                        <TextBlock Grid.Row="0" Text="Должность: " FontSize="24" 
+                        <TextBlock Grid.Row="0" Text="Рабочий отдел: " FontSize="24" 
 Foreground="Black" FontWeight="DemiBold"/>
                         <TextBlock Grid.Row="0" Text="{Binding UserWorkDepartment, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="24" 
 Foreground="Black" FontWeight="ExtraLight"/>
