--- a/CompanyNews/Views/AdminApp/AccountPage.xaml
+++ b/CompanyNews/Views/AdminApp/AccountPage.xaml
@@ -144,7 +144,7 @@ From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
                                                 Width="*" IsReadOnly="True">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
-                                    <Setter Property="HorizontalAlignment" Value="Left" />
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
                                     <Setter Property="TextWrapping" Value="Wrap" />
                                     <Setter Property="Margin" Value="0,0,5,0"/>
                                 </Style>
@@ -156,7 +156,7 @@ From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="HorizontalAlignment" Value="Center" />
                                     <Setter Property="TextWrapping" Value="Wrap" />
-                                    <Setter Property="Margin" Value="0,0,10,0"/>
+                                    <Setter Property="Margin" Value="0,0,5,0"/>
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
